Added two components

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                 
                 <p class="bg-danger lead auth-error" v-if="authErrors.error">{{authErrors.msg}}</p>
             </form>
+
+            <button-counter></button-counter>
+            <hello-component></hello-component>
         </div>
     </div>
 </body>
